responsive gemaakt, picture is weg bij formaat kleiner dan lg

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
           
           <div class="container-fluid" id="over">
             <div class="row" id="about">
-              <div class="col-md-7 about-bg" id="about-bg">
+              <div class="col-lg-7 hidden-md hidden-sm hidden-xs about-bg" id="about-bg">
                 
               </div>
-                <div class="col-md-5 about-bg">
+                <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 about-bg">
                   <br><h1 id="about-text" class="text-center zapfino">Over Ewing Text & Translation</h1><br>
                   <hr class="style18">          
                   <br>  
