--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<link href="http://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.0/css/bootstrapValidator.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
+
 
     </head>
 
@@ -191,7 +193,7 @@
                   <br>  
 
                   <div class="col-md-10 col-md-offset-1">
-                    <form class="well form-horizontal" action=" " method="post"  id="contact_form">
+                    <form class="well form-horizontal" action="contact.php" method="post"  id="contact_form">
                       <fieldset>
 
                         <!-- Naam -->
@@ -237,9 +239,18 @@
                               </div>
                           </div>
                         </div>
+                        <!-- this field is written into the contact.php file to prevent spambots from submitting your form. -->
+                        <div class="form-group" id="gotcha">
+                          <label class="col-md-4 control-label">Laat dit veld leeg</label>  
+                          <div class="col-md-4 inputGroupContainer">
+                          <div class="input-group">
+                          <input  name="gotcha"  class="form-control"  type="text">
+                            </div>
+                          </div>
+                        </div>
 
                         <!-- Success message -->
-                        <div class="alert alert-success" role="alert" id="s uccess_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
+                        <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you shortly.</div>
 
                         <!-- Button -->
                         <div class="form-group">
@@ -298,10 +309,12 @@
 
 
 <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
+<script src="js/validate-me.js"></script>
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/script.js" type="text/javascript"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js"></script>
 
 
 </body>
